[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-ai>=2.31.4",
    "jupyter-ai-magics>=2.31.4",
    "langgraph>=0.4.7",
    "langgraph-cli[inmem]>=0.2.10",
]
