[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.3",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "jupyter-ai>=2.31.4",
    "jupyter-ai-magics>=2.31.4",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph-supervisor>=0.0.26",
    "langmem>=0.0.27",
    "openai>=1.82.0",
    "openai-agents>=0.0.17",
]
